--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Ultimate JavaScript Mastery Series - Part 2</title>
-    <script src="index.js"></script>
+    <script src="dist/main.js"></script>
   </head>
   <body></body>
 </html>
